[package]
name = "vrl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.71"
structopt = { version = "0.3.25", default-features = false }
tokio = { version = "1.14.0", default-features = false, features = ["full"] }
warp = "0.3.2"

# v0.24.1
value = { git = "https://github.com/vectordotdev/vector", rev = "8935681" }
vector_common = { git = "https://github.com/vectordotdev/vector", rev = "8935681" }
vrl = { git = "https://github.com/vectordotdev/vector", rev = "8935681" }
vrl-stdlib = { git = "https://github.com/vectordotdev/vector", rev = "8935681" }

bytes = "1.2.1"